--- a/account/templates/account-login.html
+++ b/account/templates/account-login.html
@@ -14,7 +14,8 @@
                     <div class="col-md-5">
                         <div class="page-header-st3-content text-center text-md-start">
                             <ol class="breadcrumb justify-content-center justify-content-md-start">
-                                <li class="breadcrumb-item"><a class="text-dark" href="{% url 'shop:home' %}">صفحه اصلی</a>
+                                <li class="breadcrumb-item"><a class="text-dark" href="{% url 'shop:home' %}">صفحه
+                                    اصلی</a>
                                 </li>
                                 <li class="breadcrumb-item active text-dark" aria-current="page">حساب کاربری</li>
                             </ol>
@@ -37,11 +38,23 @@
 
                             <!--== Display Error Messages ==-->
                             {% if messages %}
-                                {% for message in messages %}
-                                    <div class="alert alert-danger" role="alert">
-                                        {{ message }}
-                                    </div>
-                                {% endfor %}
+                                <div class="row justify-content-lg-center align-items-center mt-5">
+                                    {% for message in messages %}
+                                        <div class="alert
+                {% if message.tags %}
+                    {% if 'success' in message.tags %}alert-success
+                    {% elif 'warning' in message.tags %}alert-warning
+                    {% elif 'error' in message.tags %}alert-danger
+                    {% elif 'info' in message.tags %}alert-info
+                    {% else %}alert-secondary
+                    {% endif %}
+                {% else %}alert-secondary
+                {% endif %}
+                col-lg-6 col-12" role="alert">
+                                            {{ message }}
+                                        </div>
+                                    {% endfor %}
+                                </div>
                             {% endif %}
                             <!--== End Error Messages ==-->
 
@@ -49,7 +62,9 @@
                                 <form action="" method="post">
                                     <div class="form-group mb-6">
                                         <label for="login_username">شماره تلفن <sup>*</sup></label>
-                                        <input type="text" id="login_username" name="username" autocomplete="login_username" autofocus placeholder="09121231234" maxlength="11" required>
+                                        <input type="text" id="login_username" name="username"
+                                               autocomplete="login_username" autofocus placeholder="09121231234"
+                                               maxlength="11" required>
                                     </div>
                                     {% csrf_token %}
                                     <div class="form-group d-flex align-items-center mb-14 justify-content-lg-center">
