--- a/templates/parent/footer.html
+++ b/templates/parent/footer.html
@@ -21,11 +21,14 @@
                         <h4 class="widget-title">اطلاعات</h4>
                         <ul class="widget-nav">
                             <li><a href="{% url 'shop:about_us' %}">درباره ما</a></li>
-                            <li><a href="#">مخاطب</a></li>
-                            <li><a href="#">حریم خصوصی</a></li>
-                            <li><a href="#">ورود</a></li>
-                            <li><a href="#">فروشگاه</a></li>
-                            <li><a href="#">اکانت من</a></li>
+                            <li><a href="{% url 'shop:home' %}#email-notification">به ما بپیوند</a></li>
+                            {% if request.user.is_authenticated %}
+                                <li><a href="{% url 'account:profile' %}">اکانت من</a></li>
+                                <li><a href="{% url 'account:logout' %}">خروج از حساب</a></li>
+                            {% else %}
+                                <li><a href="{% url 'account:login' %}">ورود</a></li>
+                            {% endif %}
+                            <li><a href="{% url 'product:list_view' %}">فروشگاه</a></li>
                             <li><a href="#">سوالات متداول</a></li>
                         </ul>
                     </div>
