--- a/templates/parent/footer.html
+++ b/templates/parent/footer.html
@@ -29,7 +29,7 @@
                                 <li><a href="{% url 'account:login' %}">ورود</a></li>
                             {% endif %}
                             <li><a href="{% url 'product:list_view' %}">فروشگاه</a></li>
-                            <li><a href="#">سوالات متداول</a></li>
+                            <li><a href="{% url 'shop:faq' %}">سوالات متداول</a></li>
                         </ul>
                     </div>
                 </div>
