--- a/templates/parent/footer.html
+++ b/templates/parent/footer.html
@@ -35,7 +35,7 @@
                 </div>
                 <div class="col-md-6 col-lg-3 mt-lg-0 mt-6">
                     <div class="widget-item">
-                        <h4 class="widget-title">اطلاعات اجتماعی</h4>
+                        <h4 class="widget-title">در فضای مجازی ما را دنبال کنید</h4>
                         <div class="widget-social">
                             <a href="https://twitter.com/" target="_blank" rel="noopener"><i class="fa fa-twitter"></i></a>
                             <a href="https://www.facebook.com/" target="_blank" rel="noopener"><i
@@ -54,7 +54,7 @@
     <div class="footer-bottom">
         <div class="container pt-0 pb-0">
             <div class="footer-bottom-content">
-                <p class="copyright">© برنسی 2022. ساخته شده با <i class="fa fa-heart"></i> توسط جلیل سرور.</p>
+                <p class="copyright">© اوریفلیم 2024 ساخته شده توسط محمد حجت نیکوبخت</p>
             </div>
         </div>
     </div>
