--- a/templates/parent/footer.html
+++ b/templates/parent/footer.html
@@ -30,6 +30,7 @@
                             {% endif %}
                             <li><a href="{% url 'product:list_view' %}">فروشگاه</a></li>
                             <li><a href="{% url 'shop:faq' %}">سوالات متداول</a></li>
+                            <li><a href="{% url 'shop:contact' %}">با ما در ارتباط باشید</a></li>
                         </ul>
                     </div>
                 </div>
