--- a/templates/parent/header.html
+++ b/templates/parent/header.html
@@ -13,61 +13,45 @@
             <div class="col-lg-7 col-xl-7 d-none d-lg-block">
                 <div class="header-navigation ps-7">
                     <ul class="main-nav justify-content-start">
-                        <li class="has-submenu"><a href="{% url 'shop:home' %}">خانه</a>
-                            <ul class="submenu-nav">
-                                <li><a href="#">خانه 1</a></li>
-                                <li><a href="#">خانه 2</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="#">درباره ما</a></li>
-                        <li class="has-submenu position-static"><a href="#">فروشگاه</a>
+                        <li><a href="{% url 'shop:home' %}">خانه</a></li>
+                        <li><a href="{% url 'shop:about_us' %}">درباره ما</a></li>
+                        <li class="has-submenu position-static"><a href="{% url 'product:list_view' %}">فروشگاه</a>
                             <ul class="submenu-nav-mega">
-                                <li><a href="#" class="mega-title">چیدمان فروشگاه</a>
+                                <li><a class="mega-title">محصولات جدید</a>
                                     <ul>
-                                        <li><a href="#">فروشگاه 3 ستون</a></li>
-                                        <li><a href="#">فروشگاه 4 ستون</a></li>
-                                        <li><a href="#">فروشگاه نوار کناری سمت راست</a></li>
-                                        <li><a href="#">فروشگاه نوار کناری سمت چپ</a></li>
+                                        {% for n_product in new_products %}
+                                            <li><a href="{{ n_product.get_absolute_url }}">{{ n_product.title }}</a></li>
+                                        {% endfor %}
                                     </ul>
                                 </li>
-                                <li><a href="#" class="mega-title">تک محصولی</a>
+                                <li><a class="mega-title">محصولات پر فروش</a>
                                     <ul>
-                                        <li><a href="#">جزئیات محصول معمولی</a></li>
-                                        <li><a href="#">جزئیات محصول</a></li>
-                                        <li><a href="#">جزئیات محصول گروهی</a></li>
-                                        <li><a href="#">محصول وابسته</a></li>
+                                        {% for m_s_product in most_sold_products %}
+                                            <li><a href="{{ m_s_product.get_absolute_url }}">{{ m_s_product.title }}</a></li>
+                                        {% endfor %}
                                     </ul>
                                 </li>
-                                <li><a href="#" class="mega-title">صفحات دیگر</a>
+                                <li><a class="mega-title">دسته بندی های پر فروش</a>
                                     <ul>
-                                        <li><a href="#">سبد خرید</a></li>
-                                        <li><a href="#">پرداخت</a></li>
-                                        <li><a href="#">لیست علاقه مندیها</a></li>
-                                        <li><a href="#">مقایسه کنید</a></li>
+                                        {% for m_s_category in most_sold_categories %}
+                                            <li><a href="{{ m_s_category.get_absolute_url }}">{{ m_s_category.name }}</a></li>
+                                        {% endfor %}
                                     </ul>
                                 </li>
                             </ul>
                         </li>
-                        <li class="has-submenu"><a href="#">وبلاگ</a>
+                        <li class="has-submenu"><a>حساب کاربری</a>
                             <ul class="submenu-nav">
-                                <li class="has-submenu"><a href="#/">طرح بندی وبلاگ</a>
-                                    <ul class="submenu-nav">
-                                        <li><a href="#">شبکه وبلاگ</a></li>
-                                        <li><a href="#">منو سایدبار سمت راست وبلاگ</a></li>
-                                        <li><a href="#">منو سایدبار سمت چپ وبلاگ</a></li>
-                                    </ul>
-                                </li>
-                                <li><a href="#">جزئیات وبلاگ</a></li>
+                                {% if request.user.is_authenticated %}
+                                    <li><a href="{% url 'account:profile' %}">پروفایل</a></li>
+                                    <li><a href="{% url 'account:logout' %}">خروج</a></li>
+                                {% else %}
+                                    <li><a href="{% url 'account:login' %}">حساب کاربری</a></li>
+                                {% endif %} 
                             </ul>
                         </li>
-                        <li class="has-submenu"><a href="#">صفحه</a>
-                            <ul class="submenu-nav">
-                                <li><a href="#">حساب کاربری</a></li>
-                                <li><a href="#">سوالات متداول</a></li>
-                                <li><a href="#">صفحه یافت نشد</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="#">ارتباط با ما</a></li>
+                        <li><a href="{% url 'shop:faq' %}">سوالات متداول</a></li>
+                        <li><a href="{% url 'shop:contact' %}">ارتباط با ما</a></li>
                     </ul>
                 </div>
             </div>
