feat(cart save button)
cart save button now works better in saving progress

--- a/cart/templates/product-cart.html
+++ b/cart/templates/product-cart.html
@@ -82,7 +82,7 @@
                             {% endfor %}
                             <tr class="tbody-item-actions">
                                 <td colspan="6">
-                                    <button type="submit" class="btn-update-cart">ویرایش سبد خرید
+                                    <button type="submit" class="btn-update-cart" hidden="hidden">ذخیره کردن تغییرات
                                     </button>
                                 </td>
                             </tr>
