--- a/product/templates/product-details.html
+++ b/product/templates/product-details.html
@@ -15,7 +15,7 @@
             <div class="container">
                 <ol class="breadcrumb justify-content-center">
                     <li class="breadcrumb-item"><a href="{% url 'shop:home' %}">صفحه اصلی</a></li>
-                    <li class="breadcrumb-item"><a href="{% url 'shop:home' %}">محصولات</a></li>
+                    <li class="breadcrumb-item"><a href="{% url 'product:list_view' %}">محصولات</a></li>
                     <li class="breadcrumb-item active" aria-current="page">{{ product.title }}</li>
                 </ol>
             </div>
