--- a/shop/templates/index.html
+++ b/shop/templates/index.html
@@ -1,5 +1,6 @@
 {% extends 'parent/base.html' %}
 {% load static %}
+{% load tags %}
 
 {% block title %}
 	صفحه اصلی
@@ -135,9 +136,9 @@
 {#                                </div>#}
                                 <h4 class="title"><a href="{% url 'product:detail_view' product.slug %}">{{ product.title }}</a></h4>
                                 <div class="prices">
-                                    <span class="price">{{ product.get_price }} تومان</span>
+                                    <span class="price">{{ product.get_price | intcomma }} تومان</span>
                                     {% if product.discount %}
-                                        <span class="price-old">{{ product.price }}</span>
+                                        <span class="price-old">{{ product.price | intcomma }}</span>
                                     {% endif %}
                                 </div>
                             </div>
