--- a/templates/partials/cart_single_product.html
+++ b/templates/partials/cart_single_product.html
@@ -1,8 +1,9 @@
+{% load tags %}
 <li class="aside-product-list-item" id="product-{{ slug }}">
     <a class="remove quick-remove" data-slug="{{ slug }}">×</a>
     <a href="#">
         <img src="{{ img }}" width="68" height="84" alt="Image">
         <span class="product-title">{{ title }}</span>
     </a>
-    <span class="product-price">{{ quantity }} × {{ price }} تومان</span>
+    <span class="product-price">{{ quantity }} × {{ price | intcomma }} تومان</span>
 </li>
