--- a/templates/partials/cart.html
+++ b/templates/partials/cart.html
@@ -21,7 +21,7 @@
                 </li>
             {% endfor %}
         </ul>
-        <p class="cart-total"><span>جمع کل:</span><span id="cart-total-price" class="amount">{{ cart.get_total_cost }} تومان</span>
+        <p class="cart-total"><span>جمع کل:</span><span id="cart-total-price" class="amount">{{ cart.get_total_cost | intcomma }} تومان</span>
         </p>
         <a class="btn-total" href="{% url 'cart:cart_list' %}">مشاهده سبد خرید</a>
     </div>
