fix(content): Updated some of the information and logos on the site
-Fixed back to home button in the faq page

--- a/shop/templates/index.html
+++ b/shop/templates/index.html
@@ -21,7 +21,7 @@
                                     <div class="hero-slide-content">
                                         <div class="hero-slide-text-img"><img src="{% static 'images/slider/text-theme.webp' %}" width="427" height="232" alt="Image"></div>
                                         <h2 class="hero-slide-title">محصـول تـازه</h2>
-                                        <p class="hero-slide-desc">خرید انواع لوازم آرایشی شامل آرایش صورت، لوازم آرایش چشم، بهداشت و زیبایی ناخن، آرایش مو و ابرو از برندهای میبلین، گارنیه، لورآل، اتود</p>
+                                        <p class="hero-slide-desc">خرید انواع لوازم آرایشی شامل آرایش صورت، لوازم آرایش چشم، بهداشت و زیبایی ناخن، آرایش مو و ابرو از برند اوریفلیم</p>
                                         <a class="btn btn-border-dark" href="{% url 'product:list_view' %}">هم اکنون خریداری کنید</a>
                                     </div>
                                 </div>
