--- a/templates/parent/footer.html
+++ b/templates/parent/footer.html
@@ -9,7 +9,7 @@
                     <div class="widget-item">
                         <div class="widget-about">
                             <a class="widget-logo" href="{% url 'shop:home' %}">
-                                <img src="{% static 'images/logo.webp' %}" width="95" height="68" alt="Logo">
+                                <img src="{% static 'images/main_logo.png' %}" width="95" height="68" alt="Logo">
                             </a>
                             <p class="desc"> برای خانم‌ها و آقایانی که قصد خرید محصولاتی عالی و اصلی را دارند و
                                 می‌خواهند درباره چیزی که می‌خرند اطلاعات کامل و واقعی داشته باشند.</p>
