--- a/shop/templates/faq.html
+++ b/shop/templates/faq.html
@@ -11,7 +11,7 @@
         <nav aria-label="breadcrumb" class="breadcrumb-style1">
             <div class="container">
                 <ol class="breadcrumb justify-content-center">
-                    <li class="breadcrumb-item"><a href="{% url 'shop:home' %}l">صفحه اصلی</a></li>
+                    <li class="breadcrumb-item"><a href="{% url 'shop:home' %}">صفحه اصلی</a></li>
                     <li class="breadcrumb-item active" aria-current="page">سوالات متداول</li>
                 </ol>
             </div>
