--- a/templates/parent/header.html
+++ b/templates/parent/header.html
@@ -6,7 +6,7 @@
             <div class="col-5 col-lg-2 col-xl-1">
                 <div class="header-logo">
                     <a href="#">
-                        <img class="logo-main" src="{% static 'images/logo.webp' %}" width="95" height="68" alt="Logo"/>
+                        <img class="logo-main" src="{% static 'images/main_logo.png' %}" width="95" height="68" alt="Logo"/>
                     </a>
                 </div>
             </div>
