--- a/product/templates/product-list.html
+++ b/product/templates/product-list.html
@@ -79,7 +79,7 @@
                                                     href="{{ product.get_absolute_url }}">{{ product.title }}</a></h4>
                                             <div class="prices">
                                                 <span class="price">{{ product.get_price | intcomma }} تومان</span>
-                                                {% if product.discount %}
+                                                {% if product.new_price %}
                                                     <span class="price-old">{{ product.price | intcomma }}</span>
                                                 {% endif %}
                                             </div>
