feat(information): Add new information
-Completed contact us page information
-Edited the phone number that was shown in the product-checkout page

--- a/order/templates/product-checkout.html
+++ b/order/templates/product-checkout.html
@@ -177,7 +177,7 @@
                                                 <div id="itemOne" class="collapse show" aria-labelledby="check_payments"
                                                      data-bs-parent="#PaymentMethodAccordion">
                                                     <div class="card-body">
-                                                        <p>پس از ثبت سفارش با ما تماس بگیرید. 09001234567</p>
+                                                        <a href="tel://+989132017122" >پس از ثبت سفارش با ما تماس بگیرید. 09132017122</a>
                                                     </div>
                                                 </div>
                                             </div>
