--- a/shop/templates/contact.html
+++ b/shop/templates/contact.html
@@ -14,17 +14,15 @@
                 <div class="contact-info">
                     <div class="contact-info-item">
                         <img class="icon" src="{% static 'images/icons/1.webp' %}" width="30" height="30" alt="Icon">
-                        <a href="tel://+11020303023">+11 0203 03023</a>
-                        <a href="tel://+11020303023">+11 0203 03023</a>
+                        <a href="tel://+989132017122" style="direction: ltr;">+98 913 201 7122</a>
                     </div>
                     <div class="contact-info-item">
                         <img class="icon" src="{% static 'images/icons/2.webp' %}" width="30" height="30" alt="Icon">
-                        <a href="mailto://example@demo.com">example@demo.com</a>
-                        <a href="mailto://demo@example.com">demo@example.com</a>
+                        <a href="https://t.me/saran_oriflame1403">کانال تلگرام</a>
                     </div>
                     <div class="contact-info-item mb-0">
                         <img class="icon" src="{% static 'images/icons/3.webp' %}" width="30" height="30" alt="Icon">
-                        <p>میدان ولیعصر</p>
+                        <p>اصفهان خیابان جی</p>
                     </div>
                 </div>
             </div>
