--- a/shop/templates/index.html
+++ b/shop/templates/index.html
@@ -27,7 +27,7 @@
                                 </div>
                                 <div class="col-12 col-md-6">
                                     <div class="hero-slide-thumb">
-                                        <img src="{% static 'images/slider/slider1.webp' %}" width="841" height="832" alt="Image">
+                                        <img src="{% static 'images/slider/slider1New.png' %}" width="841" height="832" alt="Image">
                                     </div>
                                 </div>
                             </div>
