fix(footer): Fixed Enemad logo
-Added the missing Enemad verified logo in footer

--- a/templates/parent/footer.html
+++ b/templates/parent/footer.html
@@ -11,6 +11,9 @@
                             <a class="widget-logo" href="{% url 'shop:home' %}">
                                 <img src="{% static 'images/main_logo.png' %}" width="95" height="68" alt="Logo">
                             </a>
+                            <a class="widget-logo" referrerpolicy='origin' target='_blank' href='https://trustseal.enamad.ir/?id=630906&Code=ELGxJpShHwmYlnAj4p2Zk2vDJvkfXQh6'>
+                                <img referrerpolicy='origin' src='https://trustseal.enamad.ir/logo.aspx?id=630906&Code=ELGxJpShHwmYlnAj4p2Zk2vDJvkfXQh6' alt='' style='cursor:pointer' code='ELGxJpShHwmYlnAj4p2Zk2vDJvkfXQh6'>
+                            </a>
                             <p class="desc"> برای خانم‌ها و آقایانی که قصد خرید محصولاتی عالی و اصلی را دارند و
                                 می‌خواهند درباره چیزی که می‌خرند اطلاعات کامل و واقعی داشته باشند.</p>
                         </div>
